tdf#127548: Assertion when creating table in Design

+ fix segfault by resetting m_xContainer and m_xBuilder when disposing
Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8c66efa030e98cfdf5da20be368566d64e43c5d1

Change-Id: Ib80dc035b9fbddcf9665d534376a4dc36ec2e9e5
Reviewed-on: https://gerrit.libreoffice.org/78942
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>